force-app/main/default/objects/BOT_Coverage_Policy__c/BOT_Coverage_Policy__c.object-meta.xml
<CustomObject>
    <description>(BOT) It is created by BusinessOne Technologies Inc. It is used to store the coverage policy details and having a lookup relationship with Account.</description>
    <label>Coverage Policy</label>
    <nameField>
        <label>Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coverage Policies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>