force-app/main/default/objects/BOT_Coverage_Policy__c/fields/BOT_Account__c.field-meta.xml
<CustomField>
    <fullName>BOT_Account__c</fullName>
    <description>Master-Detail relationship to the account object.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Coverage policy</relationshipLabel>
    <relationshipName>Account</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>