force-app/main/default/objects/BOT_Coverage_Policy__c/fields/BOT_Age_requirements__c.field-meta.xml
<CustomField>
    <fullName>BOT_Age_requirements__c</fullName>
    <label>Age Requirements</label>
    <length>100</length>
    <type>Text</type>
</CustomField>