force-app/main/default/objects/BOT_Coverage_Policy__c/fields/BOT_Channel__c.field-meta.xml
<CustomField>
    <fullName>BOT_Channel__c</fullName>
    <description>For channel selection neither commercial or medicate</description>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
                <default>true</default>
                <label>ALL</label>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>