force-app/main/default/objects/BOT_Coverage_Policy__c/fields/BOT_Conditions__c.field-meta.xml
<CustomField>
    <fullName>BOT_Conditions__c</fullName>
    <description>It is a subsection of diagnostic requirements for initial therapy</description>
    <label>Conditions</label>
    <length>250</length>
    <type>Text</type>
</CustomField>