force-app/main/default/objects/BOT_Coverage_Policy__c/fields/BOT_Conditions_for_Initial_Stage__c.field-meta.xml
<CustomField>
    <fullName>BOT_Conditions_for_Initial_Stage__c</fullName>
    <description>It is a subsection of Prior Authorization</description>
    <label>Conditions for Initial Stage</label>
    <length>250</length>
    <type>Text</type>
</CustomField>