force-app/main/default/objects/BOT_Coverage_Policy__c/fields/BOT_CP_Form_Available__c.field-meta.xml
<CustomField>
    <fullName>BOT_CP_Form_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if Coverage Policy form is available with the Account Plan.</description>
    <label>CP Form Available</label>
    <type>Checkbox</type>
</CustomField>