force-app/main/default/objects/BOT_Coverage_Policy__c/fields/BOT_DRC__c.field-meta.xml
<CustomField>
    <fullName>BOT_DRC__c</fullName>
    <description>Diagnostic Requirements for Continued Therapy Details</description>
    <label>Diagnostic Requirements for Continued</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>