force-app/main/default/objects/BOT_Coverage_Policy__c/fields/BOT_DRI__c.field-meta.xml
<CustomField>
    <fullName>BOT_DRI__c</fullName>
    <description>Diagnostic Requirements for Initial Therapy Details</description>
    <label>Diagnostic Requirements for Initial</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>