force-app/main/default/objects/BOT_Coverage_Policy__c/fields/BOT_Drug_Policy_ID__c.field-meta.xml
<CustomField>
    <fullName>BOT_Drug_Policy_ID__c</fullName>
    <description>Used to Store the Policy ID.</description>
    <label>Drug Policy ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>