force-app/main/default/objects/BOT_Coverage_Policy__c/fields/BOT_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>BOT_Effective_Date__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>