force-app/main/default/objects/BOT_Coverage_Policy__c/fields/BOT_Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>BOT_Entity_ID__c</fullName>
    <description>To store the BOT Entity ID. It is used for BOT internal reference.</description>
    <label>Entity ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>