force-app/main/default/objects/BOT_Coverage_Policy__c/fields/BOT_Formulary_Product__c.field-meta.xml
<CustomField>
    <fullName>BOT_Formulary_Product__c</fullName>
    <description>Master-Detail relationship to the Formulary Product object.</description>
    <label>Drug</label>
    <referenceTo>Formulary_Products_vod__c</referenceTo>
    <relationshipLabel>Coverage Policy</relationshipLabel>
    <relationshipName>Formulary_Product</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>