force-app/main/default/objects/BOT_Coverage_Policy__c/fields/BOT_Formulary_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>BOT_Formulary_Product_ID__c</fullName>
    <description>To store the BOT Drug ID. This field is used in Coverage Policy Before insert trigger to pull the SFDC Drug ID from the Formulary Product object.</description>
    <label>Formulary Product ID</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>