force-app/main/default/objects/BOT_Coverage_Policy__c/fields/BOT_HCPCS_Codes__c.field-meta.xml
<CustomField>
    <fullName>BOT_HCPCS_Codes__c</fullName>
    <label>HCPCS Codes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>