force-app/main/default/objects/BOT_Coverage_Policy__c/fields/BOT_ICD_9_Codes__c.field-meta.xml
<CustomField>
    <fullName>BOT_ICD_9_Codes__c</fullName>
    <label>ICD-9 Codes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>