force-app/main/default/objects/BOT_Coverage_Policy__c/fields/BOT_PA_Form_Available__c.field-meta.xml
<CustomField>
    <fullName>BOT_PA_Form_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if PA Form is available with the Account Plan.</description>
    <label>PA Form Available</label>
    <type>Checkbox</type>
</CustomField>