force-app/main/default/objects/BOT_Coverage_Policy__c/fields/BOT_PADetail__c.field-meta.xml
<CustomField>
    <fullName>BOT_PADetail__c</fullName>
    <label>PA Detail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>