force-app/main/default/objects/BOT_Coverage_Policy__c/fields/BOT_Policy_Name_Source__c.field-meta.xml
<CustomField>
    <fullName>BOT_Policy_Name_Source__c</fullName>
    <description>This field is used to store the name field value. Because Coverage policy name contains more than 80 characters. But the standard name field allows a maximum of 80 characters only. So we are using this field to store the complete name. A workflow rule is used to update the standard name field by using this field value.</description>
    <label>Policy Name Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>