force-app/main/default/objects/BOT_Coverage_Policy__c/fields/BOT_Policy_type__c.field-meta.xml
<CustomField>
    <fullName>BOT_Policy_type__c</fullName>
    <description>To store the policy type</description>
    <label>Policy type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>