force-app/main/default/objects/BOT_Coverage_Policy__c/fields/BOT_Poly_Therapy_Details__c.field-meta.xml
<CustomField>
    <fullName>BOT_Poly_Therapy_Details__c</fullName>
    <description>Poly Therapy Details</description>
    <label>Poly Therapy Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>