force-app/main/default/objects/BOT_Coverage_Policy__c/fields/BOT_Prior_Authorization_Details__c.field-meta.xml
<CustomField>
    <fullName>BOT_Prior_Authorization_Details__c</fullName>
    <description>It is a subsection of Prior Authorization</description>
    <label>Prior Authorization Details</label>
    <length>250</length>
    <type>Text</type>
</CustomField>