force-app/main/default/objects/BOT_Coverage_Policy__c/fields/BOT_Score__c.field-meta.xml
<CustomField>
    <fullName>BOT_Score__c</fullName>
    <label>Score</label>
    <length>100</length>
    <type>Text</type>
</CustomField>