force-app/main/default/objects/BOT_Coverage_Policy__c/fields/BOT_STDetail__c.field-meta.xml
<CustomField>
    <fullName>BOT_STDetail__c</fullName>
    <label>Step Therapy Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>