force-app/main/default/objects/BOT_Coverage_Policy__c/fields/BOT_Sub_Indication__c.field-meta.xml
<CustomField>
    <fullName>BOT_Sub_Indication__c</fullName>
    <label>Sub-Indication</label>
    <length>50</length>
    <type>Text</type>
</CustomField>