force-app/main/default/objects/BOT_Coverage_Policy__c/fields/BOT_SubChannel__c.field-meta.xml
<CustomField>
    <fullName>BOT_SubChannel__c</fullName>
    <description>To store the Sub Channel value</description>
    <label>SubChannel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>